--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,24 @@
 *::-webkit-scrollbar-thumb:hover {
    background: #555;
 }
+
+@font-face {
+   font-family: 'OpenSans';
+   src: url('../fonts/OpenSans-Regular.woff2') format('woff2'),
+       url('../fonts/OpenSans-Regular.woff') format('woff');
+   font-weight: bold;
+   font-style: normal;
+   font-display: swap;
+}
+
+body {
+   font-family: 'OpenSans';
+}
+
+ul {
+   list-style: none;
+}
+
+a {
+   text-decoration: none;
+}
