--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,53 @@ ul {
 a {
    text-decoration: none;
 }
+
+/* 
+   MENU SECTION 
+*/
+
+.container {
+   margin: 0 auto;
+}
+
+.main_app .container {
+    display: flex;
+    position: relative;
+}
+
+.menu {
+   background-color: white;
+   position: absolute;
+   width: 300px;
+   height: 100vh;
+   left: 0;
+   top: 0;
+   z-index: 3;
+   box-shadow: 0 0 20px 0 rgba(0,0,0,0.1);
+   transform: translateX(-100%);
+   transition: .5s;
+}
+
+.menu__header {
+   height: 150px;
+   background-image: url("../images/chat-back.jpg");
+   background-size: cover;
+   padding: 25px;
+}
+
+.menu__header__image {
+   width: 50px;
+   border-radius: 50%;
+   margin-bottom: 20px;
+} 
+
+.menu__header__text {
+   width: 55%;
+   color: white;
+   font-size: 18px;
+   line-height: 1.2;
+}
+
+.menu__header__text span {
+   font-size: 15px;
+}
