--- a/css/style.css
+++ b/css/style.css
@@ -153,3 +153,50 @@ a {
    transform: translateX(80%);
    background-color:skyblue;
 }
+
+/* 
+   LEFT APP SECTION
+*/
+
+.left_app {
+   width: 300px;
+   height: 100vh;
+   border: 1px solid rgba(0,0,0,0.1);
+}
+
+.main_app__header {
+   padding: 10px;
+   display: flex;
+   width: 100%;
+}
+
+.hamburger__button {
+   width: 20px;
+   border: none;
+   outline: none;
+   background-color: transparent;
+   transition: .3s;
+   cursor: pointer;
+}
+
+.hamburger__image {
+   width: 100%;
+}
+
+.search__input {
+   padding: 10px 15px;
+   margin-left: 10px;
+   width: calc(100% / 1);
+   background-color: #F1F1F1;
+   outline: none;   
+   border-radius: 5px;
+   font-size: 16px;
+}
+
+.border-input {
+   border: 1px solid rgb(30, 176, 202);
+}
+
+.search__input::placeholder {
+   font-size: 13px;
+}
