--- a/css/style.css
+++ b/css/style.css
@@ -260,3 +260,166 @@ a {
    margin-top: 10px;
    font-size: 0.9rem;
 }
+
+/* 
+   RIGHT APP SECTION
+*/
+
+.right_app {
+   width: calc(100vw - 300px);
+   height: 100vh;
+   position: relative;
+}
+
+.shadow {
+   position: absolute;
+   background-color: rgba(0,0,0,0.5);
+   width: 99.9%;
+   height: 99.9%;
+   z-index: 2;
+   transition: .3s;
+}
+
+.shadowHidden {
+   display: none;
+}
+
+.chat__modal {
+   position: absolute;
+   left: 50%;
+   top: 50%;
+   transform: translate(-86%, -50%);
+   width: 33%;
+   height: 95%;
+   overflow-y: scroll;
+   background-color: white;
+   border-radius: 5px;
+   box-shadow: 0 0 30px rgba(0,0,0,0.1);
+   z-index: 4;
+}
+
+.info__header {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   padding: 25px;
+   padding-bottom: 0;
+}
+
+.user__info, .user__btn {
+   font-size: 20px;
+}
+
+.user__btn {
+   font-size: 30px;
+   cursor: pointer;
+}
+
+.info__name {
+   display: flex;
+   align-items: center;
+   margin-top: 30px;
+   padding: 25px;
+   padding-top: 0;
+}
+
+.info__name__img {
+   width: 70px;
+   border-radius: 50%;
+}
+
+.info__name__text {
+   margin-left: 20px;
+   font-size: 18px;
+   font-weight: 550;
+}
+
+.info__name__time {
+   margin-left: 20px;
+   font-size: 15px;
+   color: rgba(0,0,0,0.5)
+}
+
+.back {
+   background-color: rgba(0,0,0,0.1);
+   width: 100%;
+   height: 8px;
+}
+
+.personality__list {
+   padding: 25px;
+}
+
+.mobile {
+   display: flex;
+   align-items: center;
+}
+
+.mobile__img {
+   width: 30px;
+}
+
+.mobile__text {
+   margin-left: 40px;
+}
+
+.mob, .bio__slog {
+   font-size: 14px;
+   color: rgba(0,0,0,0.5)
+}
+
+.bio {
+   margin: 20px 0;
+   margin-left: 70px;
+   padding-bottom: 30px;
+   /* margin-bottom: 20px; */
+   border-bottom: 1px solid rgba(0,0,0,0.5);
+}
+
+.notific {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.notific div {
+   display: flex;
+   align-items: center;
+}
+
+.notific__img {
+   width: 30px;
+}
+
+.notific__text {
+   margin-left: 40px;
+}
+
+.contact__footer {
+   padding: 25px;
+   padding-bottom: 0;
+   margin-top: 15px;
+}
+
+.contact__item1 {
+   display: flex;
+   align-items: center;
+}
+
+.contact__item1 p {
+   margin-left: 40px;
+}
+
+.contact__item {
+   margin: 10px 0;
+   margin-left: 65px
+}
+
+.contact__item2 {
+   color: red;
+   margin-left: 65px;
+}
+
+.chatHidden {
+   display: none;
+}
