--- a/css/style.css
+++ b/css/style.css
@@ -710,3 +710,77 @@ a {
    align-items: center;
    position: relative;
 }
+
+/* 
+   THREE DOT MODAL SECTION
+*/
+
+.threedot__list {
+   position: absolute;
+   top: 95%;
+   right: 45%;
+   background-color: white;
+   width: 180px;
+   box-shadow: 0 0 20px 0 rgba(0,0,0,0.1);
+   z-index: 1;
+   border-radius: 5px;
+}
+
+.threedot__item {
+   padding: 10px 20px;
+   transition: 0.3s;
+   cursor: pointer;
+}
+
+.threedot__item:hover {
+   background-color: rgba(0,0,0,0.1);
+}
+
+.threedotHidden {
+   display: none;
+}
+
+.settings__modal__button {
+   background-color: transparent;
+   outline: none;
+   border: none;
+   cursor: pointer;
+}
+
+.settings__modal__image1 {
+   width: 26px;
+   margin-right: 5px;
+}
+
+.settings__modal__image2 {
+   width: 22px;
+}
+
+/* 
+   LOGO SECTION
+*/
+
+.logo {
+   display: flex;
+   align-items: center;
+   padding: 20px;
+}
+
+.logo__image {
+   width: 65px;
+   border-radius: 50%;
+}
+
+.logo__text {
+   margin-left: 20px;
+   font-size: 18px;
+   font-weight: bold;
+   width: 40%;
+   line-height: 1.2;
+}
+
+.logo__text span {
+   font-size: 15px;
+   font-weight: normal;
+   color: rgb(30, 176, 202);
+}
