--- a/css/style.css
+++ b/css/style.css
@@ -784,3 +784,39 @@ a {
    font-weight: normal;
    color: rgb(30, 176, 202);
 }
+
+/* 
+   SETTINGS MAIN SECTION
+*/
+
+.settings__main {
+   background-color: rgba(0,0,0,0.1);
+}
+
+.settings__main__list {
+   background-color: white;
+   margin: 10px 0;
+   width: 100%;
+}
+
+.settings__main__item {
+   display: flex;
+   align-items: center;
+   margin: 7px 0;
+   padding: 6px 20px;
+   cursor: pointer;
+   transition: .3s;
+}
+
+.settings__main__item:hover {
+   background-color: rgba(0,0,0,0.1);
+}
+
+.item__img {
+   width: 25px;
+}
+
+.item__text {
+   font-size: 15px;
+   margin-left: 30px;
+}
