--- a/css/style.css
+++ b/css/style.css
@@ -820,3 +820,104 @@ a {
    font-size: 15px;
    margin-left: 30px;
 }
+
+/* 
+   INTERFACE SESCTION
+*/
+
+.interface {
+   display: flex;
+   flex-direction: column;
+}
+
+.interface__head__list {
+   margin: 15px 0;
+   padding: 10px 20px;
+   width: 100%;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   transition: .3s;
+}
+
+.interface__head__list:hover {
+   background-color: rgba(0,0,0,0.1);
+}
+
+.interface__head__item {
+   display: flex;
+   align-items: center;
+   cursor: pointer;
+}
+
+.interface__head__item p {
+   margin-left: 20px;
+}
+
+.button__list {
+   display: flex;
+   background-color: white;
+}
+
+.button__item {
+   padding:5px;
+}
+
+.interface__button {
+   background-color: transparent;
+   border: none;
+   outline: none;
+   cursor: pointer;
+}
+
+.interface__button:focus .interface__back {
+   background-color: rgb(30, 176, 202);
+}
+
+.interface__button:focus .interface__percent {
+   color: rgb(30, 176, 202);
+}
+
+.interface__percent {
+   font-size: 15px;
+}
+
+.interface__back {
+   background-color: rgba(0,0,0,0.1);
+   width: 50px;
+   height: 2px;
+   margin-bottom: 10px;
+}
+
+/* 
+   SETTINGS FOOTER SECTION
+*/
+
+.settings__modal__footer {
+   margin-top: 10px;
+   padding-top: 10px;
+   background-color: rgba(0,0,0,0.1);
+}
+
+.settings__modal__footer__list {
+   background-color: white;
+   padding: 20px;
+}
+
+.settings__modal__footer__item1 {
+   display: flex;
+   margin-bottom: 10px;
+   height: 100%;
+}
+
+.settings__modal__footer__img {
+   width: 25px;
+}
+
+.settings__modal__footer__text1 {
+   margin-left: 30px;
+}
+
+.settings__modal__footer__text {
+   margin-left: 55px;
+}
