--- a/css/style.css
+++ b/css/style.css
@@ -502,6 +502,8 @@ a {
    height: calc(100vh - 120px);
    overflow-y: scroll;
    margin: 0 auto;
+   display: flex;
+   flex-direction: column-reverse;
 }
 
 .message__list {
